# deptmaster

./:     .gitignore  ALL_ERRORS_FIXED.md  ALL_FIXED.md  ALL_FIXED_FINAL.md  ALL_FONTS_DEFAULT.md  ALL_WORKING.md  APP_READY.md  APP_RUNNING.md  BALANCE_FIXED.md  BALANCE_SYSTEM.md  CHECK_AND_INSTALL.sh  CHECK_CONSOLE.md  CHECK_SERVER.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLIENT_STATUS.md  CONSOLE_CLEANED.md  CONTACT_TRANSACTIONS_ADDED.md  CREATE_ENDPOINTS_IMPLEMENTED.md  CREATE_WORKING.md  DATA_IMPORTED.md  DEBUG_TRANSACTIONS.md  DEFAULT_FONTS_FIXED.md  DESKTOP_FIX.md  DESKTOP_TRANSACTIONS_FIXED.md  DESKTOP_WORKS_BY_DEFAULT.md  FINAL_STATUS.md  FIXED_ERRORS.md  FIXED_TRANSACTION_ERROR.md  FIXES_APPLIED.md  FLUTTER_APP_RUNNING.md  FLUTTER_READY.md  FLUTTER_WEB_STATUS.md  HOT_RELOAD_ANSWER.md  HOW_TO_STOP_SERVER.md  ICONS_FIXED.md  IMPLEMENTATION_COMPLETE.md  IMPORT_DEBITUM.md  INSTALL_FLUTTER.md  (+53 more)
.cargo/: config.toml
backend/: .env.example  docker-compose.yml
backend/rust-api/: Cargo.toml  Dockerfile
backend/rust-api/.sqlx/: README.md
backend/rust-api/migrations/: 001_initial_schema.sql  002_remove_transaction_settled.sql  003_add_due_date.sql  004_user_settings.sql  005_create_default_user.sql  006_add_username_to_contacts.sql  007_add_idempotency_and_versions.sql  008_add_projection_snapshots.sql  009_add_login_logs.sql  010_add_admin_users.sql  011_create_wallets.sql  012_add_wallet_id_to_tables.sql  013_projection_snapshots_wallet_unique.sql  014_advanced_permissions.sql  015_wallet_invite_codes.sql  016_add_username_to_users.sql  017_fix_missing_permissions.sql  018_restrict_default_permissions.sql  019_update_invite_codes.sql  020_permission_matrix_allow_deny.sql  021_add_contact_edit_action.sql
backend/rust-api/src/: app_state.rs  config.rs  lib.rs  main.rs  websocket.rs
backend/rust-api/src/background/: scheduler.rs
backend/rust-api/src/database/: mod.rs
backend/rust-api/src/handlers/: admin.rs  admin_auth.rs  auth.rs  contacts.rs  mod.rs  settings.rs  sync.rs  transactions.rs  users.rs  wallets.rs
backend/rust-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security_headers.rs  wallet_context.rs
backend/rust-api/src/models/: currency.rs  ids.rs  mod.rs
backend/rust-api/src/services/: eventstore.rs  mod.rs  permission_service.rs  projection_snapshot_service.rs  seed_data.rs
backend/rust-api/src/utils/: date.rs  mod.rs
backend/rust-api/static/admin/: config.example.js  index.html
backend/rust-api/static/app/: CHANGELOG.md  README.md  config.example.js
backend/rust-api/tests/: README.md  app_instances_sync_test.rs  integration_test.rs  new_algorithm_test.rs  permission_enforcement_test.rs  permission_test.rs  snapshot_optimization_test.rs  test_helpers.rs  transaction_handlers_test.rs  transaction_update_test.rs  undo_event_test.rs  wallet_context_middleware_test.rs  wallet_isolation_test.rs  wallet_management_test.rs  wallet_permissions_stage2a_test.rs
crates/debitum_client_core/: BUGS.md  Cargo.toml  README.md  flutter_rust_bridge.yaml
crates/debitum_client_core/src/: api.rs  backoff.rs  crud.rs  frb_generated.rs  ids.rs  lib.rs  log_bridge.rs  models.rs  state_builder.rs  storage.rs  sync.rs
crates/debitum_client_core/tests/: comprehensive_events.rs  conflict.rs  connection.rs  groups.rs  integration.rs  integration_comprehensive_events.rs  integration_multi_app_sync.rs  integration_single_app.rs  integration_test.rs  multi_app_sync.rs  offline_online_multi_app.rs  permissions.rs  resync.rs  single_app.rs  stress.rs
crates/debitum_client_core/tests/common/: app_instance.rs  assert_runner.rs  command_runner.rs  event_generator.rs  mod.rs  test_helpers.rs
docs/: ADDITIONAL_CONSIDERATIONS.md  ADMIN_PAGE_API_USAGE.md  ADMIN_PANEL.md  ADMIN_PANEL_TROUBLESHOOTING.md  ADVANCED_PERMISSIONS_PLAN.md  API.md  (+41 more)
frontend/: Cargo.toml  README.md  build.rs  install-cargo-wasm-wrapper.sh  serve.sh  setup-cargo-wasm.sh
frontend/.cargo/: config.toml
frontend/cargo-wrap/: cargo
frontend/src/: app.rs  event_store.rs  lib.rs  main.rs  state_builder.rs  theme.rs
frontend/src/models/: contact.rs  event.rs  mod.rs  transaction.rs  wallet.rs
frontend/src/screens/: backend_setup.rs  contacts.rs  dashboard.rs  home.rs  login.rs  mod.rs  transactions.rs
frontend/src/widgets/: gradient_background.rs  gradient_card.rs  mod.rs
frontend/tests/: event_store_test.rs  state_builder_test.rs
(+226 files in other folders)
