[package]
name = "debt-tracker-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "debt_tracker_api"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
futures = "0.3"
futures-util = "0.3"

# Background tasks
tokio-cron-scheduler = "0.9"

# Email
lettre = "0.11"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Base64 encoding (for EventStore)
base64 = "0.22"

# Redis (optional)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# WebSocket
tokio-tungstenite = "0.21"
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
axum-test = "8.0"

[profile.dev]
# Faster incremental compilation
incremental = true
opt-level = 0
debug = true

[profile.release]
# Optimized but faster to build
opt-level = 3
lto = "thin"  # Faster than full LTO, still good optimization
codegen-units = 4  # More parallel compilation units = faster builds
incremental = true  # Enable incremental compilation for release
